--- a/Day1-HW.ipynb
+++ b/Day1-HW.ipynb
@@ -85,7 +85,7 @@
    "id": "09966df7-537c-4eff-99db-34e867e29b86",
    "metadata": {},
    "source": [
-    "(double click here to enter your answer)"
+    "Initially when the course first began I was experiencing some trouble with the programs we were using, but through some troubleshooting and practice I'm beginning to feel a lot more confident using these interfaces. Once I had the applications all figured I become excited about specifc things in the course. For example I am very excited to pursue topics that interest me personally. I am also excited to gain more experience with python, and gain some knowledge on data science as a whole. When I think of what I'm afraid of it would have to be my time management skills. Throughout my first year at the university, I struggled with procrastination. As I go into my second year I look to end some of my bad habits. "
    ]
   },
   {
@@ -103,7 +103,7 @@
    "id": "b0a303cb-3230-4b14-a715-6a42e82b9a48",
    "metadata": {},
    "source": [
-    "(double click here to enter your answer)"
+    "I have had some basic experience using python that I feel will fair me well in this course. I also have a variety of different experiences of working with other people. I gained these experiences through not only other classes but various job positions that I've held as well. My skills of collaboritation and communication will be extremley useful to me throughout this semester. "
    ]
   },
   {
@@ -120,56 +120,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "bc4f5a8b-fcc5-4f99-8c7f-d7979dda7f0d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your comment:\n",
+    "# Your comment: This command adds 2 to 5.\n",
     "2+5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "92591289-e834-4149-af91-d38241405f41",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your comment:\n",
+    "# Your comment: This command multiplys 2 by 5\n",
     "2*5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "ac48415a-b7da-446f-adea-4b59c0aa05c0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.4"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your comment:\n",
+    "# Your comment: This command divides 2 by 5.\n",
     "2/5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "5b1dd9ff-088c-410a-9b6c-4a2700256a42",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "32"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your comment:\n",
+    "# Your comment: This command raises 2 to the power 5.\n",
     "2**5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "fe55cb71-0eb1-4967-9c10-064f5bcf8c10",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "55"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your comment:\n",
+    "# Your comment: This command finds the sum of all the integers in the brackets.\n",
     "sum([1,2,3,4,5,6,7,8,9,10])"
    ]
   },
@@ -191,12 +246,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "33863654-6774-459c-a608-ccde35d2277c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8.25"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n",
+    "((3)*(2+9))/(2**2)\n",
     "\n",
     "\n"
    ]
